# devops

./: .gitignore  README.md  ansible.cfg  pyproject.toml
ansible/: README.md  desktop-vm.yml  desktop.yml  production  server.yml  staging
ansible/group_vars/: desktops.yml  servers.yml
ansible/host_vars/: all.yml  lat7490.yml  nuc8i7beh.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: 20auto-upgrades.j2  50unattended-upgrades.j2
assets/: README.md  hosts.ini
assets/debian/: modify-installer.sh
assets/dfrobot_cm4_router/: README.md
assets/lat7490/: README.md  custom-commands.yaml  network.yaml  playbook-duplicati.yaml  playbook.yaml  storage.yaml  vars.env
assets/nuc8i7beh/: 99-netplan-config.yaml  README.md  custom-commands.cfg  network.cfg  storage.cfg  vars.env
assets/qemu/: README.md  playbook.yaml  vars.env
assets/qemu/debian-server/: custom-commands.cfg  network.cfg  storage.cfg  vars.env  vm_create.sh  vm_destroy.sh
assets/qemu/ubuntu-desktop/: README.md  custom-commands.yaml  network.yaml  playbook.yaml  storage.yaml  vars.env  vm_create.sh  vm_destroy.sh
assets/ubuntu/: identity.yaml  initial-login.sh  modify-installer.sh  vars.env
distros/: README.md
distros/debian/: README.md  identity.cfg  main.cfg  modify-installer.sh  vars.env
distros/ubuntu/: README.md  identity.yaml  main.yaml  modify-installer.sh  vars.env
scripts/: 99-openocd.rules  README.md  autocomplete_bashhistory.sh  install_bazel.sh  install_docker.sh  install_etcher.sh  install_ohmybash.sh  install_pip.sh  install_poetry.sh  install_rust.sh  install_vagrant_kvm.sh  install_vscode.sh  setup_yubikey_LUKS.sh
(+13 files in other folders)
