[tool.poetry]
name = "devops"
version = "0.1.0"
description = "IaC description of IT assets."
authors = ["df"]

[tool.poetry.dependencies]
python = "^3.8.0"
psutil = "^5.9.0"
ansible = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
