[tool.poetry]
name = "devops"
version = "0.1.0"
description = "Installation and provisioning of IT assets."
authors = ["df"]

[tool.poetry.dependencies]
python = "^3.8.0"
psutil = "^5.9.0"
ansible = "^5.4.0"
pyyaml = "^6.0.0"
mendel-development-tool = "^1.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length=79
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''